--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">From Slow Bidirectional to Fast Causal <br> Video Generators</h1>
+            <h1 class="title is-1 publication-title">From Slow Bidirectional to <br> Fast Causal Video Generators</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://tianweiy.github.io/">Tianwei Yin</a><sup>1*</sup>,
@@ -72,10 +72,10 @@
               <span class="author-block">
                 <a href="http://richzhang.github.io/">Richard Zhang</a><sup>2</sup>,
               </span>
+              <br>
               <span class="author-block">
                 <a href="https://billf.mit.edu/">Bill Freeman</a><sup>1</sup>,
               </span>
-              <br>
               <span class="author-block">
                 <a href="https://people.csail.mit.edu/fredo/">Frédo Durand</a><sup>1</sup>,
               </span>
