--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
             student initialization scheme based on teacher's ODE trajectories, as well as an asymmetric distillation
             strategy that supervises a causal student model with a bidirectional teacher. This approach effectively
             mitigates error accumulation in autoregressive generation, allowing long-duration video synthesis despite
-            training on short clips. Our model achieves a total score of 82.85 on VBench-Long, outperforming all
-            published approaches. Notably, it supports fast streaming inference at 9.4 FPS on a single GPU thanks to KV
+            training on short clips. Our model supports fast streaming generation of high quality videos at 9.4 FPS on a single GPU thanks to KV
             caching. Our approach also enables streaming video-to-video translation, image-to-video, and dynamic
             prompting in a zero-shot manner. We will release the code based on an open-source model in the future. </p>
         </div>
