--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <div class="item">
           <video id="cereal" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/24fps_videos/0014_A_Samoyed_and.mp4mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/24fps_videos/0014_A_Samoyed_and.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">A Samoyed and a Golden Retriever dog are playfully romping through a futuristic neon
