--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
       <pre><code>@article{yin2024causvid,
         title={From Slow Bidirectional to Fast Causal Video Generators},
         author={Yin, Tianwei and Zhang, Qiang and Zhang, Richard and Freeman, William T and Durand, Fredo and Shechtman, Eli and Huang, Xun},
-        journal={arXiv},
+        journal={arXiv preprint arXiv:2412.07772},
         year={2024}
       }
   </code></pre>
