--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                  <a href="./causvid_paper.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2412.07772" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
