--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <nav id="toc">
       <div class="toc-header">
         <span>Webpage Menu</span>
-        <button id="toggleButton">▼</button>
+        <button id="toggleButton">▶</button>
       </div>
-      <ul id="tocContent">
+      <ul id="tocContent" class="collapsed">
         <li><a href="#demo">Top: Demo video</a></li>
         <li><a href="#abstract">1. Abstract</a></li>
         <li><a href="#overview">2. CausVid Method Overview</a></li>
