--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper</span>
+                    <span>Paper (ArXiv)</span>
                   </a>
                 </span>
               </div>
