update long video generation

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <li><a href="#result">3. Quantitative Result</a></li>
         <li><a href="#ui">4. Interactive UI</a></li>
         <li><a href="#text2short">5. Text to 5-second Short Video Generation</a></li>
-        <li><a href="#text2long">6. Text to 60-second Long Video Generation</a></li>
+        <li><a href="#text2long">6. Text to 30-second Long Video Generation</a></li>
         <li><a href="#image2video">7. Zero-shot Image to Video Generation</a></li>
         <li><a href="#text2shortcomparison">8. Text to Short Video Qualitative Comparison</a></li>
         <li><a href="#text2longcomparison">9. Text to Long Video Qualitative Comparison</a></li>
@@ -442,11 +442,11 @@
       <hr>
 
       <div class="container " id="text2long">
-        <h2 id="obj-comparison" class="title is-3 has-text-centered">Text to 60-second Long Video Generation</h2>
+        <h2 id="obj-comparison" class="title is-3 has-text-centered">Text to 30-second Long Video Generation</h2>
         <div class="content has-text-justified" style="font-size: 1.5rem; line-height: 1.8;">
           <p>
-            While our generator is trained on 10-second videos, its autoregressive nature enables it to produce videos
-            of infinite length using sliding window inference. Below, we present 60-second video results (12 FPS) generated with
+            While our generator is trained on short video clips, its autoregressive nature enables it to produce videos
+            of infinite length using sliding window inference. Below, we present 30-second video results (24 FPS) generated with
             prompts from MovieGenBench and a fixed random seed of 0.
           </p>
         </div>
@@ -460,7 +460,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0024.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0001_Miniature_adorable_monsters.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">Miniature adorable monsters made out of wool and felt, dancing with each other, 3d
@@ -470,7 +470,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0025.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0002_panda.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">Panda bear wearing gold-plated stiletto shoes strutting with a sassy demeanor through a
@@ -480,7 +480,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0012.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0003_In_a_magical.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">In a magical garden, plants change colors with each passing breeze, their leaves
@@ -490,7 +490,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0014.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0004_Baby_dragon.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">Baby dragon</p>
@@ -500,7 +500,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0032.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0005_Camera_tracking_shot..mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">Camera tracking shot. A man walking down a city street, holding a coffee cup in his
@@ -510,7 +510,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0048.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0006_A_bear_made.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">A bear made of strawberrys is walking in the forest, its eyes looking around as if it
@@ -520,7 +520,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0040.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0007_3D_animation_of.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">3D animation of a small, round, fluffy creature with big, expressive eyes explores a
@@ -535,7 +535,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0046.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0008_The_gentle_bubbling.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">The gentle bubbling and evaporation of water in a natural hot spring, with mist rising
@@ -546,7 +546,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0029.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0009_Visual%3A_A_night.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">Visual: A night scene in a city with wet streets reflecting city lights. The camera
@@ -558,7 +558,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0016.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0010_An_adorable_happy.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">An adorable happy otter confidently stands on a surfboard wearing a yellow lifejacket,
@@ -567,7 +567,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0001.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0011_A_llama_sits.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">A llama sits in a cozy reading nook, surrounded by plush pillows and soft blankets.
@@ -578,7 +578,7 @@
         <div class="item">
           <video id="item" controls preload="metadata" autoplay muted loop playsinline>
             <source
-              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/long_videos/60s/0018.mp4"
+              src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/30s_24fps_videos/0012_A_drone_camera.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">A drone camera circles around a beautiful historic church built on a rocky outcropping
