--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
       <hr>
       <div class="container " id="abstract">
         <h2 id="obj-comparison" class="title is-3 has-text-centered">Abstract</h2>
+        <figure class="image is-centered">
+          <img src="images/teaser.png">
+        </figure>
         <div class="content has-text-justified" style="font-size: 1.5rem; line-height: 1.8;">
           <p>
             Current video diffusion models achieve impressive generation quality but struggle in interactive
@@ -177,7 +180,9 @@
             caching. Our approach also enables streaming video-to-video translation, image-to-video, and dynamic
             prompting in a zero-shot manner. We will release the code based on an open-source model in the future. </p>
         </div>
+
       </div>
+
 
       <br>
       <br>
