update vbench results

--- a/index.html
+++ b/index.html
@@ -218,8 +218,10 @@
         </h2>
         <div class="content has-text-justified" style="font-size: 1.5rem; line-height: 1.8;">
           <p>
-            Our model achieves a total score of 82.85 on VBench-Long, outperforming all published approaches and
-            uniquely enabling fast streaming inference on a single GPU at 9.4 FPS.
+            Our model achieves a total score of 83.88 on VBench (see 
+            <a href="https://huggingface.co/spaces/Vchitect/VBench_Leaderboard">VBench Leaderboard</a>) 
+            ranking the first place among all verified submissions and
+            uniquely enabling fast streaming inference on a single GPU at 9.4 FPS. 
             The radar plot visualizes our method's comprehensive performance advantages across several key metrics,
             including dynamic degree, aesthetic quality, imaging quality, object class, multiple objects, and human
             action.
