--- a/index.html
+++ b/index.html
@@ -692,14 +692,14 @@
           <p class="prompt-text">Watercolor style of a boy on a paper ship in the blue sea waves.</p>
         </div>
 
-        <div class="item">
+        <!-- <div class="item">
           <video id="cereal" controls preload="metadata" autoplay muted loop playsinline>
             <source
               src="https://huggingface.co/datasets/tianweiy/causvid_website/resolve/main/videos/5s_i2v_decoded/video_0007.mp4"
               type="video/mp4">
           </video>
           <p class="prompt-text">bionic prosthetic hand on dark background.</p>
-        </div>
+        </div> -->
 
         <div class="item">
           <video id="cereal" controls preload="metadata" autoplay muted loop playsinline>
