--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>From Slow Bidirectional to Fast Causal Video Generators</title>
+  <title>From Slow Bidirectional to Fast Autoregressive Video Diffusion Models</title>
 
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -173,19 +173,16 @@
         </figure>
         <div class="content has-text-justified" style="font-size: 1.5rem; line-height: 1.8;">
           <p>
-            Current video diffusion models achieve impressive generation quality but struggle in interactive
-            applications due to bidirectional attention dependencies. The generation of a single frame requires the
-            model to process the entire sequence, including the future. We address this limitation by adapting a
-            pretrained bidirectional diffusion transformer to a causal transformer that generates frames on-the-fly. To
-            further reduce latency, we extend distribution matching distillation (DMD) to videos, distilling 50-step
-            diffusion model into a 4-step generator. To enable stable and high-quality distillation, we introduce a
-            student initialization scheme based on teacher's ODE trajectories, as well as an asymmetric distillation
-            strategy that supervises a causal student model with a bidirectional teacher. This approach effectively
-            mitigates error accumulation in autoregressive generation, allowing long-duration video synthesis despite
-            training on short clips. Our model supports fast streaming generation of high quality videos at 9.4 FPS on a
-            single GPU thanks to KV
-            caching. Our approach also enables streaming video-to-video translation, image-to-video, and dynamic
-            prompting in a zero-shot manner. We will release the code based on an open-source model in the future. </p>
+            Current video diffusion models achieve impressive generation quality but struggle in interactive applications due to bidirectional attention dependencies.
+            The generation of a single frame requires the model to process the entire sequence, including the future.
+            We address this limitation by adapting a pretrained bidirectional diffusion transformer to an autoregressive transformer that generates frames on-the-fly.
+            To further reduce latency, we extend distribution matching distillation (DMD) to videos, distilling 50-step diffusion model into a 4-step generator.
+            To enable stable and high-quality distillation, we introduce a student initialization scheme based on teacher's ODE trajectories, as well as an asymmetric distillation strategy that supervises a causal student model with a bidirectional teacher.
+            This approach effectively mitigates error accumulation in autoregressive generation, allowing long-duration video synthesis despite training on short clips.
+            Our model achieves a total score of 84.27 on the VBench-Long benchmark, surpassing all previous video generation models.    
+            It enables fast streaming generation of high-quality videos at 9.4 FPS on a single GPU thanks to KV caching. Our approach also enables streaming video-to-video translation, image-to-video, and dynamic prompting in a zero-shot manner.
+            We will release the code based on an open-source model in the future.
+         </p>
         </div>
 
       </div>
