--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="column has-text-centered">
             <br>
 
-            <h1 class="title is-1 publication-title">From Slow Bidirectional to <br> Fast Causal Video Generators</h1>
+            <h1 class="title is-1 publication-title">From Slow Bidirectional to <br> Fast Autoregressive Video Diffusion Models</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://tianweiy.github.io/">Tianwei Yin</a><sup>1*</sup>,
