--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{yin2024causvid,
-        title={From Slow Bidirectional to Fast Causal Video Generators},
+        title={From Slow Bidirectional to Fast Autoregressive Video Diffusion Models},
         author={Yin, Tianwei and Zhang, Qiang and Zhang, Richard and Freeman, William T and Durand, Fredo and Shechtman, Eli and Huang, Xun},
         journal={arXiv preprint arXiv:2412.07772},
         year={2024}
