--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
               <span class="author-block"><sup>*</sup>Equal Contribution</span>
             </div>
 
+            <div class="is-size-5 publication-venue">
+              in CVPR 2025 
+            </div>  
+
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
@@ -1370,11 +1374,11 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{yin2024causvid,
+      <pre><code>@article{yin2025causvid,
         title={From Slow Bidirectional to Fast Autoregressive Video Diffusion Models},
         author={Yin, Tianwei and Zhang, Qiang and Zhang, Richard and Freeman, William T and Durand, Fredo and Shechtman, Eli and Huang, Xun},
-        journal={arXiv preprint arXiv:2412.07772},
-        year={2024}
+        journal={CVPR},
+        year={2025}
       }
   </code></pre>
     </div>
