--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
               <span class="author-block"><sup>*</sup>Equal Contribution</span>
             </div>
 
-            <div class="is-size-5 publication-venue">
-              in CVPR 2025 
+            <div class="column has-text-centered">
+              CVPR 2025 
             </div>  
 
             <div class="column has-text-centered">
